# filesync

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.toml
include/: connection.hpp  md5.hpp
syncclient/src/: main.cpp
synclocal/src/: main.cpp
syncserver/src/: main.cpp
